--- a/LoE-Launcher/MainWindow.axaml
+++ b/LoE-Launcher/MainWindow.axaml
@@ -22,23 +22,6 @@
                 </Transitions>
             </Setter>
         </Style>
-        <Style Selector="Button.IconButton">
-            <Setter Property="Background" Value="#9C69B5" />
-            <Setter Property="Width" Value="50" />
-            <Setter Property="Height" Value="50" />
-            <Setter Property="CornerRadius" Value="25" />
-            <Setter Property="Padding" Value="0" />
-            <Setter Property="Cursor" Value="Hand" />
-            <Setter Property="BorderThickness" Value="0" />
-        </Style>
-        <Style Selector="Button.IconButton:pointerover">
-            <Setter Property="Background" Value="#B37DC7" />
-            <Setter Property="RenderTransform" Value="scale(1.05)" />
-        </Style>
-        <Style Selector="Button.IconButton:pressed">
-            <Setter Property="Background" Value="#7E529A" />
-            <Setter Property="RenderTransform" Value="scale(0.95)" />
-        </Style>
         <Style Selector="Button.SocialButton">
             <Setter Property="Background" Value="#33FFFFFF" />
             <Setter Property="Width" Value="50" />
@@ -56,14 +39,41 @@
             <Setter Property="Background" Value="#22FFFFFF" />
             <Setter Property="RenderTransform" Value="scale(0.95)" />
         </Style>
-        <Style Selector="Button.settings-button:pointerover">
-            <Setter Property="Background" Value="#E49AE0" />
-            <Setter Property="BorderBrush" Value="#F8D78C" />
-            <Setter Property="RenderTransform" Value="scale(1.03)" />
+        <Style Selector="Button.SettingsButton">
+            <Setter Property="Width" Value="70" />
+            <Setter Property="Height" Value="70" />
+            <Setter Property="Cursor" Value="Hand" />
+            <Setter Property="Template">
+                <ControlTemplate>
+                    <Border x:Name="PART_Border"
+                            Background="#9C69B5"
+                            CornerRadius="35"
+                            BorderThickness="0">
+                        <Image x:Name="PART_Icon"
+                               Width="36" Height="36"
+                               Source="avares://LoE-Launcher/Assets/Gear.png"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Opacity="1.0" />
+                        <Border.Transitions>
+                            <Transitions>
+                                <TransformOperationsTransition Property="RenderTransform" Duration="0:0:0.15" />
+                                <BrushTransition Property="Background" Duration="0:0:0.15" />
+                            </Transitions>
+                        </Border.Transitions>
+                    </Border>
+                </ControlTemplate>
+            </Setter>
         </Style>
-        <Style Selector="Button.settings-button:pressed">
-            <Setter Property="Background" Value="#B66DB2" />
-            <Setter Property="BorderBrush" Value="#E8B75C" />
+        <Style Selector="Button.SettingsButton:pointerover /template/ Border#PART_Border">
+            <Setter Property="Background" Value="#B37DC7" />
+            <Setter Property="RenderTransform" Value="scale(1.02)" />
+        </Style>
+        <Style Selector="Button.SettingsButton:pointerover /template/ Image#PART_Icon">
+            <Setter Property="Opacity" Value="1.0" />
+        </Style>
+        <Style Selector="Button.SettingsButton:pressed /template/ Border#PART_Border">
+            <Setter Property="Background" Value="#7E529A" />
             <Setter Property="RenderTransform" Value="scale(0.98)" />
         </Style>
         <Style Selector="Border.InfoPanel">
@@ -90,29 +100,12 @@
         </Panel>
 
         <Grid VerticalAlignment="Top">
-            <Grid VerticalAlignment="Top"
-                  Background="Transparent"
-                  IsHitTestVisible="True"
-                  Height="50"
-                  PointerPressed="OnTitleBarPointerPressed" />
 
             <!-- Social Media Panel - Top Left -->
             <StackPanel HorizontalAlignment="Left"
                         VerticalAlignment="Top"
-                        Margin="20,50,0,0"
+                        Margin="20,40,0,0"
                         Spacing="10">
-                
-                <Button x:Name="btnSettings"
-                        Classes="IconButton"
-                        Click="OnSettingsButtonClicked"
-                        HorizontalContentAlignment="Center"
-                        VerticalContentAlignment="Center"
-                        ToolTip.Tip="Settings">
-                    <Panel>
-                        <Image Width="26" Height="26"
-                               Source="avares://LoE-Launcher/Assets/Gear.png" />
-                    </Panel>
-                </Button>
 
                 <Button x:Name="btnYoutube"
                         Classes="SocialButton"
@@ -121,14 +114,15 @@
                         VerticalContentAlignment="Center"
                         ToolTip.Tip="YouTube">
                     <Panel>
-                        <Path Data="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"
-                              Fill="White"
-                              Width="22"
-                              Height="22"
-                              Stretch="Uniform"
-                              HorizontalAlignment="Center"
-                              VerticalAlignment="Center"
-                              Margin="0,2,0,0"/>
+                        <Path
+                            Data="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"
+                            Fill="White"
+                            Width="22"
+                            Height="22"
+                            Stretch="Uniform"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Margin="0,2,0,0" />
                     </Panel>
                 </Button>
 
@@ -139,14 +133,15 @@
                         VerticalContentAlignment="Center"
                         ToolTip.Tip="Discord">
                     <Panel>
-                        <Path Data="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.956-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.956 2.418-2.157 2.418zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.946 2.418-2.157 2.418z"
-                              Fill="White"
-                              Width="22"
-                              Height="22"
-                              Stretch="Uniform"
-                              HorizontalAlignment="Center"
-                              VerticalAlignment="Center"
-                              Margin="0,2,0,0"/>
+                        <Path
+                            Data="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.956-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.956 2.418-2.157 2.418zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.946 2.418-2.157 2.418z"
+                            Fill="White"
+                            Width="22"
+                            Height="22"
+                            Stretch="Uniform"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Margin="0,2,0,0" />
                     </Panel>
                 </Button>
 
@@ -157,14 +152,15 @@
                         VerticalContentAlignment="Center"
                         ToolTip.Tip="Twitter">
                     <Panel>
-                        <Path Data="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"
-                              Fill="White"
-                              Width="22"
-                              Height="22"
-                              Stretch="Uniform"
-                              HorizontalAlignment="Center"
-                              VerticalAlignment="Center"
-                              Margin="0,2,0,0"/>
+                        <Path
+                            Data="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"
+                            Fill="White"
+                            Width="22"
+                            Height="22"
+                            Stretch="Uniform"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Margin="0,2,0,0" />
                     </Panel>
                 </Button>
 
@@ -176,7 +172,7 @@
                         ToolTip.Tip="Facebook">
                     <Panel>
                         <TextBlock Text="f" FontSize="24" Foreground="White" FontWeight="Bold"
-                                   HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                   HorizontalAlignment="Center" VerticalAlignment="Center" />
                     </Panel>
                 </Button>
 
@@ -190,95 +186,66 @@
                    Margin="0,40,20,0" />
         </Grid>
 
-        <StackPanel VerticalAlignment="Bottom"
-                    Margin="20,0,20,20"
-                    Spacing="14">
+        <!-- Changelog section -->
+        <Border HorizontalAlignment="Left"
+                VerticalAlignment="Bottom"
+                Width="380"
+                Height="200"
+                Margin="20,0,0,20"
+                Classes="InfoPanel"
+                Padding="12">
+            <Grid RowDefinitions="Auto,*">
+                <TextBlock Grid.Row="0"
+                           Text="Changelog"
+                           FontSize="24"
+                           FontWeight="Bold"
+                           Foreground="White"
+                           HorizontalAlignment="Center"
+                           Margin="0,0,0,15" />
 
-            <Border Classes="InfoPanel"
-                    Padding="18,14">
-                <Grid ColumnDefinitions="*,Auto">
-                    <TextBlock x:Name="lblDownloadedAmount"
-                               Grid.Column="0"
-                               Text="Ready to Launch!&#x0A;0B downloaded"
-                               FontSize="14"
-                               FontWeight="Medium"
-                               Foreground="#F0FFFFFF"
-                               TextWrapping="Wrap"
-                               VerticalAlignment="Center" />
-                    <TextBlock x:Name="lblDownloadStats"
-                               Grid.Column="1"
-                               Text=""
-                               FontSize="14"
-                               Foreground="#E0FFFFFF"
-                               IsVisible="False"
-                               HorizontalAlignment="Right"
-                               VerticalAlignment="Top"
-                               Margin="10,0,0,0" />
-                </Grid>
-            </Border>
+                <ScrollViewer Grid.Row="1"
+                              VerticalScrollBarVisibility="Auto"
+                              HorizontalScrollBarVisibility="Disabled">
+                    <StackPanel x:Name="changelogPanel"
+                               Spacing="2" />
+                </ScrollViewer>
+            </Grid>
+        </Border>
 
-            <Border Classes="InfoPanel"
-                    Padding="4"
-                    ClipToBounds="True">
-                <ProgressBar x:Name="pbState"
-                             Height="14"
-                             CornerRadius="5"
-                             HorizontalAlignment="Stretch"
-                             Value="100">
-                    <ProgressBar.Transitions>
-                        <Transitions>
-                            <DoubleTransition Property="Value" Duration="0:0:0.3" Easing="CubicEaseOut" />
-                        </Transitions>
-                    </ProgressBar.Transitions>
-                    <ProgressBar.Foreground>
-                        <LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,0%">
-                            <GradientStop Offset="0" Color="#9C69B5" />
-                            <GradientStop Offset="1" Color="#D686D2" />
-                        </LinearGradientBrush>
-                    </ProgressBar.Foreground>
-                </ProgressBar>
-            </Border>
-
-            <Button x:Name="btnAction"
-                    Content="Launch"
-                    Foreground="White"
-                    Click="OnActionButtonClicked"
-                    Width="150"
-                    Height="46"
-                    FontSize="16"
-                    FontWeight="SemiBold"
-                    CornerRadius="23"
-                    VerticalContentAlignment="Center"
-                    HorizontalContentAlignment="Center"
+        <!-- Bottom right controls: settings button and action button/progress bar -->
+        <StackPanel Orientation="Horizontal"
                     HorizontalAlignment="Right"
-                    Padding="12,0">
-                <Button.Background>
-                    <LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,0%">
-                        <GradientStop Offset="0" Color="#9C69B5" />
-                        <GradientStop Offset="1" Color="#D686D2" />
-                    </LinearGradientBrush>
-                </Button.Background>
-                <Button.Styles>
-                    <Style Selector="Button:pointerover /template/ ContentPresenter">
-                        <Setter Property="Background">
-                            <LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,0%">
-                                <GradientStop Offset="0" Color="#B37DC7" />
-                                <GradientStop Offset="1" Color="#E49AE0" />
-                            </LinearGradientBrush>
-                        </Setter>
-                        <Setter Property="RenderTransform" Value="scale(1.03)" />
-                    </Style>
-                    <Style Selector="Button:pressed /template/ ContentPresenter">
-                        <Setter Property="Background">
-                            <LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,0%">
-                                <GradientStop Offset="0" Color="#7E529A" />
-                                <GradientStop Offset="1" Color="#B66DB2" />
-                            </LinearGradientBrush>
-                        </Setter>
-                        <Setter Property="RenderTransform" Value="scale(0.98)" />
-                    </Style>
-                </Button.Styles>
-            </Button>
+                    VerticalAlignment="Bottom"
+                    Margin="0,0,20,20"
+                    Spacing="10">
+
+            <Button x:Name="btnSettings"
+                    Classes="SettingsButton"
+                    Click="OnSettingsButtonClicked"
+                    ToolTip.Tip="Settings"
+                    VerticalAlignment="Center" />
+
+            <!-- Progress bar and action button in the same position -->
+            <Grid Width="280" Height="90">
+                <ProgressBar x:Name="pbState"
+                             Height="90"
+                             Width="280"
+                             Theme="{StaticResource TexturedProgressBar}"
+                             HorizontalAlignment="Stretch"
+                             VerticalAlignment="Stretch"
+                             Value="100" />
+
+                <Button x:Name="btnAction"
+                        Content="Launch"
+                        Theme="{StaticResource ActionButton}"
+                        Click="OnActionButtonClicked"
+                        Width="280"
+                        Height="90"
+                        FontSize="28"
+                        FontWeight="Bold"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch" />
+            </Grid>
         </StackPanel>
     </Grid>
 </Window>
