Improves settings menu and log folder naming
Updates the settings menu layout by reordering buttons for better user experience.

Renames the log folder to be more specific, differentiating it from game-related logs.

--- a/LoE-Launcher/MainWindow.axaml
+++ b/LoE-Launcher/MainWindow.axaml
@@ -228,7 +228,8 @@
                    VerticalAlignment="Top"
                    Width="203"
                    Height="108"
-                   Margin="0,40,20,0" />
+                   Margin="0,40,20,0"
+                   ZIndex="100" />
         </Grid>
 
         <!-- Changelog section -->
